cleaned up some css and js, added some animations, fixed some spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,14 +129,15 @@ html, body {
 }
 
 .loginSignupToggle {
-  width: 100%;
+    width: 70%;
+    display: inline-block;
+    padding: 0% 15%;
+    position: relative;
+}
+.loginSignupButton {
   display: inline-block;
-}
-
-.loginButton {
-  display: inline;
-  width: 30%;
-  margin-right: 19%;
+  width: 41%;
+  margin: 0% 3%;
   font-weight: 300;
   text-align: center;
   font-size: 4vw;
@@ -144,36 +145,7 @@ html, body {
   color: #85C597;
   border: 2px solid rgba(255,255,255, 0.1);
 }
-.loginButtonSelected {
-  display: inline;
-  width: 30%;
-  margin-right: 19%;
-  font-weight: 300;
-  text-align: center;
-  font-size: 4vw;
-  background: #85C597;
-  color: #FFFFFF;
-  border: 2px solid rgba(133,197,151, 0.1);
-}
-
-.signupButton {
-  display: inline;
-  width: 30%;
-  margin-left: 19%;
-  font-weight: 300;
-  text-align: center;
-  font-size: 4vw;
-  background: #FFFFFF;
-  color: #85C597;
-  border: 2px solid rgba(255,255,255, 0.1);
-}
-.signupButtonSelected {
-  display: inline;
-  width: 30%;
-  margin-left: 19%;
-  font-weight: 300;
-  text-align: center;
-  font-size: 4vw;
+.loginSignupButton.selected {
   background: #85C597;
   color: #FFFFFF;
   border: 2px solid rgba(133,197,151, 0.1);
@@ -290,6 +262,12 @@ html, body {
 
 #mainPage #paymentPartial #paymentDetails.Container .cardDetails {
   padding: 0% 5% 5% 5%;
+  max-height: 150px;
+  overflow: hidden;
+  transition: all 0.32s cubic-bezier(0.2, 0, 0.2, 1);
+}
+#mainPage #paymentPartial #paymentDetails.Container .cardDetails.ng-hide {
+  max-height: 0px;
 }
 #mainPage #paymentPartial #paymentDetails.Container .cardDetails.removePadding {
   padding: 0% 5% 0% 5%;
@@ -332,15 +310,12 @@ html, body {
 #mainPage #paymentPartial #paymentDetails.Container .cardDetails input#cardYear {
   margin: 0 0;
 }
-#mainPage #paymentPartial #paymentDetails.Container .cardDetails .StripeImgBlock img {
+#mainPage #paymentPartial #paymentDetails.Container .StripeImgBlock img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: 4%;
 }
-/*#mainPage #paymentPartial #paymentDetails.Container .cardDetails input#password {
-  width: 70%;
-}*/
 #mainPage #paymentPartial #paymentDetails.Container .bottomText{
   font-size: 4vw;
   text-align: center;
@@ -389,7 +364,8 @@ html, body {
 /*​------------- Scrollbar ---------------*/
 ::-webkit-scrollbar {
     -webkit-appearance: none;
-}
+    display: none; 
+  }
 
 ::-webkit-scrollbar:vertical {
     width: 7px;
